@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.569 2009/10/14 14:48:41 nm4 Exp $
+$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.570 2009/10/16 09:51:12 nm4 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -109,6 +109,9 @@ NM/19 Bugzilla 745: TLS version reporting
       Patch provided by Phil Pennock
 
 NM/20 Bugzilla 167: bool: condition support
+      Patch provided by Phil Pennock
+
+NM/21 Bugzilla 665: gnutls_compat_mode to allow compatibility with broken clients
       Patch provided by Phil Pennock
 
 
